--- a/package.json
+++ b/package.json
@@ -20,13 +20,22 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.6",
+    "crypto": "^1.0.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "mongoose": "^9.2.1"
+    "mammoth": "^1.11.0",
+    "mongoose": "^9.2.1",
+    "multer": "^2.0.2",
+    "remark-parse": "^11.0.0",
+    "turndown": "^7.2.2",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
+    "@types/turndown": "^5.0.6",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
