feat: Establish initial backend infrastructure with Mongoose models, Express routes, and database seeding capabilities.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "strict": false,
     "sourceMap": true,
     "esModuleInterop": true,
-    "declaration": true,
-    "skipLibCheck": true
+    "declaration": true
   },
   "include": [
     "src/**/*.ts"
