--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "seed": "tsx src/scripts/seedDatabase.ts",
+    "seed:clear": "tsx src/scripts/seedDatabase.ts --clear",
+    "seed:dev": "NODE_ENV=development tsx src/scripts/seedDatabase.ts --clear",
+    "seed:help": "tsx src/scripts/seedDatabase.ts --help"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +22,13 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
     "mongoose": "^9.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
